overflow fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
   }
 
 html, body { height: 100%; position: relative;}
-body {width: 100%; overflow-x: hidden;}
+body {width: 100%; overflow-x: hidden !important;}
 .bg-black { background-color: #1a1a1a !important }
 .custom-bg-dark { background: #222222 !important}
 .text-custom-dark { color:  #222222 !important }
